# procontext-crawler

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: coding-guidelines.md
.claude/skills/changelog-release/: SKILL.md
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: brain-dump.md  implementation-plan.md
docs/research/: cloudflare-analysis.md  cloudflare-api-overview.md  cloudflare-endpoint-details.md
docs/specs/: 01-functional-spec.md  02-technical-spec.md  04-api-reference.md  05-security-spec.md
src/proctx_crawler/: __init__.py  cli.py  config.py  crawler.py  logging_config.py
src/proctx_crawler/api/: __init__.py  app.py  errors.py  middleware.py  routes.py
src/proctx_crawler/core/: browser_pool.py  crawl_service.py  discovery.py  engine.py  fetcher.py  page_service.py  renderer.py  repository.py  ssrf.py  url_utils.py
src/proctx_crawler/extractors/: __init__.py  content.py  links.py  markdown.py
src/proctx_crawler/infrastructure/: content_storage.py  sqlite_repository.py
src/proctx_crawler/models/: __init__.py  errors.py  input.py  (+3 more)
tests/integration/: conftest.py  test_cli.py  test_http_api.py  test_python_api.py
tests/unit/: test_api.py  test_app_factory.py  test_browser_pool.py  test_cli.py  test_config.py  test_content_storage.py  test_crawl_service.py  test_crawler.py  test_discovery.py  test_engine.py  test_fetcher.py  test_link_extractor.py  test_logging_config.py  test_markdown_extractor.py  test_models.py  test_page_service.py  test_renderer.py  test_sqlite_repository.py  test_ssrf.py  test_url_utils.py
