[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proctx_crawler"]

[project]
name = "proctx-crawler"
version = "0.1.0"
description = "Self-hosted crawl API for extracting structured documentation from websites"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "anyio>=4.0.0,<5.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "platformdirs>=4.0.0,<5.0.0",
    "structlog>=24.1.0,<26.0.0",
    "playwright>=1.40.0,<2.0.0",
    "markdownify>=0.14.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
]

[project.scripts]
proctx-crawler = "proctx_crawler.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.11.0",
    "pyright>=1.1.400",
    "pytest-cov>=7.0.0",
    "pip-audit>=2.7.0,<3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "T20"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
